--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 			<version>2.2-rc1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 	<!-- https://mvnrepository.com/artifact/junit/junit -->
